--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,8 @@
       <option>Probability</option>
       <option>Linear Equations in One Unknown</option>
       <option>Factorization using identities (perfect square, difference of two squares)</option>
+      <option>Factorization using cross method</option>
+      <option>Positive integral indices</option>
     </select>
 
     <label for="difficulty">Difficulty</label>
