--- a/templates/login.html
+++ b/templates/login.html
@@ -87,7 +87,7 @@
         
         <div class="info">
             <p>🔒 Secure access for authorized users only</p>
-            <p>📧 Requires @cdgfss.edu.hk email</p>
+            <p>📧 Requires @school.cdgfss.edu.hk email</p>
         </div>
         
         {% if request.args.get('error') %}
